# spike

./: .gitignore  CMakeLists.txt  README.md  data
src/: spike_lib.cpp  spike_lib.hpp  spike_math.hpp
test/src/: test.cpp
